--- a/src/app/admin/pages/employee-payment/employee-payment.component.html
+++ b/src/app/admin/pages/employee-payment/employee-payment.component.html
@@ -83,13 +83,13 @@
         </div>
         <!-- Card Body -->
         <div class="card-body">
-            <form class="form-horizontal" [formGroup]="employeeForm" (ngSubmit)="saveEmployeePayment()">
+            <form class="form-horizontal" [formGroup]="employeePaymentForm" (ngSubmit)="saveEmployeePayment()">
                 <div class="row">
                     <div class="form-group col-lg-6">
                         <label for="employee">Employee</label>
                         <select name="employee" class="form-select col-lg-12" formControlName="employeeId">
                             <option value="0">-- Select Employee --</option>
-                            <option *ngFor="let employee of employees" [value]="employee.employeeId">{{employee.firstName}} {{employee.lastName}}</option>
+                            <option *ngFor="let employee of employeesList" [value]="employee.employeeId">{{employee.firstName}} {{employee.lastName}}</option>
                         </select>
                     </div>
                 </div>
@@ -102,8 +102,8 @@
                                 <div class="input-group-prepend">
                                     <div class="input-group-text">₹</div>
                                 </div>
-                                <input type="text" class="form-control"    id="amount" placeholder="XXXXXXX"
-                                    autocomplete="off" mask="0000000" >
+                                <input type="text" class="form-control" id="amount" placeholder="XXXXXXX"
+                                    autocomplete="off" mask="0000000" formControlName="amount" >
                             </div>
                         </div>
                     </div>
@@ -114,21 +114,21 @@
                         <label for="year">Payment Month/Year</label>
                         <input autocomplete="off" class="form-control" name="date" bsDatepicker [maxDate]="today"
                             [bsConfig]="{dateInputFormat: 'MM/YYYY', containerClass: 'theme-dark-blue'}" minMode="month"
-                            placeholder="MM/YYYY">
+                            placeholder="MM/YYYY" formControlName="paymentMonthYear">
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-lg-6">
                         <label for="paymentdate">Payment Date</label>
                         <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker 
-                            [maxDate]="today"
+                            [maxDate]="today" formControlName="paymentDate"
                             [bsConfig]="{dateInputFormat: 'DD/MM/YYYY',showWeekNumbers:false, containerClass: 'theme-dark-blue'}">
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-lg-6">
                         <label for="notes">Note</label>
-                        <textarea type="text" name="notes" placeholder="Note" class="form-control "
+                        <textarea type="text" name="notes" placeholder="Enter notes here" class="form-control "
                             autocomplete="off" maxlength="200" formControlName="notes"></textarea>
                     </div>
                 </div>
