PMS-106_Project-Payment-Crud-Operation :- Remove Validators in  Employee List And Project List

--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -72,8 +72,7 @@
                     <div class="form-group col-lg-4">
                         <label for="firstName">First Name*</label>
                         <input class="form-control" type="text" id="firstName" placeholder="First Name"
-                            autocomplete="off" maxlength="100" formControlName="firstName"
-                            [ngClass]="{ 'is-invalid': submitted && f['firstName'].errors }">
+                            autocomplete="off" maxlength="100" formControlName="firstName">
                     </div>
 
                     <div class="form-group col-lg-4">
@@ -84,8 +83,7 @@
                     <div class="form-group col-lg-4">
                         <label for="lastNname">Last Name*</label>
                         <input class="form-control" type="text" id="lastName" placeholder="Last Name" autocomplete="off"
-                            maxlength="100" formControlName="lastName"
-                            [ngClass]="{ 'is-invalid': submitted && f['lastName'].errors }">
+                            maxlength="100" formControlName="lastName">
                     </div>
                 </div>
                 <div class="row">
