--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -11294,9 +11294,15 @@ button.calendar, button.calendar:active {
   background-color: #fcaeae;
   color: white;
 }
+.submit-buttons {
+  border-top: 1px solid #ededed;
+  padding-top: 15px;
+  margin-top: 10px;
+  text-align: right;
+}
 
 .submit-buttons input[type="submit"], input[type="button"] {
-  margin-right: 10px;
+  margin-right: 15px;
   min-width:100px;
 }
 
