--- a/src/app/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/admin/pages/dashboard/dashboard.component.html
@@ -17,7 +17,7 @@
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
                             Earnings (Monthly)</div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">₹ 40,000</div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">₹ {{dashboardItems.monthlyEarning}}</div>
                     </div>
                     <div class="col-auto">
                         <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -35,7 +35,7 @@
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
                             Earnings (Annual)</div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">₹ 215,000</div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">₹ {{dashboardItems.annualEarning}}</div>
                     </div>
                     <div class="col-auto">
                         <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
@@ -53,7 +53,7 @@
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
                             Projects</div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">5</div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">{{dashboardItems.totalProjects}}</div>
                     </div>
                     <div class="col-auto">
                         <i class="fas fa-comments fa-2x text-gray-300"></i>
@@ -71,7 +71,7 @@
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
                             Employees</div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">{{dashboardItems.totalEmployees}}</div>
                     </div>
                     <div class="col-auto">
                         <i class="fas fa-comments fa-2x text-gray-300"></i>
@@ -95,12 +95,8 @@
             </div>
             <div class="card-body">
                 <div class="chart-area">
-                    <canvas id="myBarChart" 
-                    baseChart 
-                    [data]="barChartData" 
-                    [type]="barChartType"
-                    [options]="barChartOptions"
-                    [plugins]="barChartPlugins">
+                    <canvas id="myBarChart" baseChart [data]="barChartData" [type]="barChartType"
+                        [options]="barChartOptions" [plugins]="barChartPlugins">
                     </canvas>
                 </div>
             </div>
@@ -115,34 +111,18 @@
                 <h6 class="m-0 font-weight-bold text-primary">Projects</h6>
             </div>
             <!-- Card Body -->
-            
-            <div class="card-body">
-                <h4 class="small font-weight-bold">Server Migration <span class="float-right">20%</span></h4>
-                <div class="progress mb-4">
-                    <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="20"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <h4 class="small font-weight-bold">Sales Tracking <span class="float-right">40%</span></h4>
-                <div class="progress mb-4">
-                    <div class="progress-bar bg-warning" role="progressbar" style="width: 40%" aria-valuenow="40"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <h4 class="small font-weight-bold">Customer Database <span class="float-right">60%</span></h4>
-                <div class="progress mb-4">
-                    <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0"
-                        aria-valuemax="100"></div>
-                </div>
-                <h4 class="small font-weight-bold">Payout Details <span class="float-right">80%</span></h4>
-                <div class="progress mb-4">
-                    <div class="progress-bar bg-info" role="progressbar" style="width: 80%" aria-valuenow="80"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <h4 class="small font-weight-bold">Account Setup <span class="float-right">Complete!</span></h4>
-                <div class="progress mrgn-btm-25">
-                    <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
 
+            <div class="card-body">
+                <div *ngFor="let dashboard of dashboardItems.projectStatusDetail;">
+                    <h4 class="small font-weight-bold">
+                        {{dashboard.status}}
+                        <span class="float-right">{{dashboard.totalProject}}</span></h4>
+                    <div class="progress mb-4">
+                        <div class="progress-bar" [ngClass]="{'bg-success': dashboard.status == 'Completed', 
+                        'bg-warning': dashboard.status == 'InProgress', 'bg-info': dashboard.status == 'OnHold', 
+                        'bg-danger': dashboard.status == 'Terminated'}" role="progressbar" [style.width]='dashboard.percentage'></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
