--- a/src/app/admin/pages/project/project.component.html
+++ b/src/app/admin/pages/project/project.component.html
@@ -152,10 +152,10 @@
                         <label for="completionDate">Completion Date </label>
                         <div class="input-group">
                             <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker
-                                formControlName="completionDate" [maxDate]="today" #sd="bsDatepicker" readonly
+                                formControlName="completionDate" [maxDate]="today" #cd="bsDatepicker" readonly
                                 [bsConfig]="{dateInputFormat: 'DD/MM/YYYY', showWeekNumbers:false, containerClass: 'theme-dark-blue'}">
                             <div class="input-group-append">
-                                <button class="btn btn-primary" type="button" (click)="sd.toggle()">
+                                <button class="btn btn-primary" type="button" (click)="cd.toggle()">
                                     <fa-icon [icon]="faCalendar"></fa-icon>
                                 </button>
                             </div>
