--- a/src/app/admin/pages/project-payment/project-payment.component.html
+++ b/src/app/admin/pages/project-payment/project-payment.component.html
@@ -145,6 +145,13 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="form-group col-lg-6">
+                        <label for="notes">Note</label>
+                        <textarea type="text" name="notes" placeholder="Enter notes here" class="form-control "
+                            autocomplete="off" maxlength="200" formControlName="notes"></textarea>
+                    </div>
+                </div>
 
                 <div class="row submit-buttons">
                     <div class="form-group col-lg-12">
