Updated N/A in  All file

--- a/src/app/admin/pages/employee-payment/employee-payment.component.html
+++ b/src/app/admin/pages/employee-payment/employee-payment.component.html
@@ -50,9 +50,9 @@
                         <tbody>
                             <tr *ngFor="let employeePayment of employeePaymentList">
                                 <td>{{employeePayment.employeeName}}</td>
-                                <td>{{employeePayment.amount}}</td>
-                                <td>{{employeePayment.month}}</td>
-                                <td>{{employeePayment.paymentDate}}</td>
+                                <td>{{employeePayment.amount || 'N/A' }}</td>
+                                <td>{{employeePayment.month || 'N/A' }}</td>
+                                <td>{{employeePayment.paymentDate || 'N/A' }}</td>
                                 <td class="action-button">
                                     <a href="javascript:void(0)" ngbTooltip="Edit"(click)="editEmployee(employeePayment)">
                                         <fa-icon [icon]="faEdit"></fa-icon>
