--- a/src/app/admin/pages/project/project.component.html
+++ b/src/app/admin/pages/project/project.component.html
@@ -39,7 +39,7 @@
                                     {{project.name}}
                                 </td>
                                 <td>
-                                    {{project.startDate }}
+                                    {{project.startDate  || 'N/A' }}
                                 </td>
                                 <td>
                                     {{ project.status || 'N/A' }}
