--- a/src/app/admin/pages/user/user.component.html
+++ b/src/app/admin/pages/user/user.component.html
@@ -23,7 +23,7 @@
 
             <div class="row">
                 <div class="col-lg-12">
-                    <table datatable [dtOptions]="dtOptions" class="row-border hover">
+                    <table class="table table-stripped">
                         <thead>
                             <tr>
                                 <th scope="col">Employee Name</th>
@@ -36,25 +36,30 @@
                         <tbody>
                             <tr *ngFor="let user of userlist">
                                 <td>
-                                    {{user.employeeName}}
+                                    {{user.employeeName || 'N/A'}}
                                 </td>
                                 <td>
-                                    {{user.role}}
+                                    {{user.role || 'N/A'}}
                                 </td>
                                 <td>
-                                    {{ user.status}}
+                                    {{ user.status|| 'N/A'}}
                                 </td>
                                 <td>
-                                    {{ user.createdDate}}
+                                    {{ user.createdDate|| 'N/A'}}
                                 </td>
 
                                 <td class="action-button">
-                                    <a href="javascript:void(0)" ngbTooltip="Edit">
+                                    <a href="javascript:void(0)" ngbTooltip="Edit"(click)="editUser(user)">
                                         <fa-icon [icon]="faEdit"></fa-icon>
                                     </a>
-                                    <a href="javascript:void(0)" ngbTooltip="Delete">
+                                    <a href="javascript:void(0)" ngbTooltip="Delete"(click)="deleteUser(user)">
                                         <fa-icon [icon]="faDelete"></fa-icon>
                                     </a>
+                                </td>
+                            </tr>
+                            <tr *ngIf="!userlist.length">
+                                <td colspan="">
+                                    No users founds
                                 </td>
                             </tr>
                         </tbody>
@@ -70,28 +75,31 @@
         </div>
         <!-- Card Body -->
         <div class="card-body">
-            <form class="form-horizontal">
+            <form class="form-horizontal"[formGroup]="usersForm" (ngSubmit)="saveUser()">
                 <div class="row">
                     <div class="form-group col-lg-4">
                         <label for="employeeName">Employee Name</label>
-                        <select name="employeeName" class="form-select col-lg-12"
-                            (change)="onEmployeeChange($event.target)">
-                            <option *ngFor="let employee of employeesName" [value]="employee.id">{{ employee.name }}
+                        <select name="employeeName" class="form-select col-lg-12" formControlName="employeeId">
+                            <option value="0">-- Select Employee --</option>
+                            <option *ngFor="let employee of employeesList" [value]="employee.employeeId">
+                                {{ employee.firstName }} {{ employee.lastName }}
                             </option>
                         </select>
                     </div>
 
                     <div class="form-group col-lg-4">
                         <label for="role">Role</label>
-                        <select name="role" class="form-select col-lg-12" (change)="onRolesChange($event.target)">
-                            <option *ngFor="let roles of roles" [value]="roles.id">{{roles.name}}
+                        <select name="role" class="form-select col-lg-12" formControlName="roleId">
+                            <option value="0">-- Select Role --</option>
+                            <option *ngFor="let roles of rolesList" [value]="roles.id">{{roles.name}}
                             </option>
                         </select>
                     </div>
 
                     <div class="form-group col-lg-4">
                         <label for="status">Status </label>
-                        <select name="status" class="form-select col-lg-12" (change)="onStatusChange($event.target)">
+                        <select name="status" class="form-select col-lg-12" formControlName="statusId">
+                            <option value="0">-- Select Status --</option>
                             <option *ngFor="let status of status" [value]="status.id">{{status.name}}
                             </option>
                         </select>
