--- a/src/app/admin/pages/user/user.component.html
+++ b/src/app/admin/pages/user/user.component.html
@@ -58,7 +58,7 @@
                                 </td>
                             </tr>
                             <tr *ngIf="!userlist.length">
-                                <td colspan="">
+                                <td colspan="5">
                                     No users founds
                                 </td>
                             </tr>
