--- a/src/app/admin/pages/project/project.component.html
+++ b/src/app/admin/pages/project/project.component.html
@@ -123,13 +123,14 @@
                         </select>
                     </div>
 
-                    <div class="form-group col-lg-4">
+                    <div class="form-group col-lg-4" >
                         <label for="status">Status </label>
                         <select name="status" class="form-select col-lg-12" formControlName="statusId">
                             <option value="0">-- Select Status --</option>
                             <option *ngFor="let status of status" [value]="status.id">{{status.name}}
                             </option>
                         </select>
+                        <div class="invalid-feedback" *ngIf="submitted && statusId.errors?.['required']"></div>
                     </div>
                 </div>
 
