--- a/src/app/admin/pages/profile/profile.component.html
+++ b/src/app/admin/pages/profile/profile.component.html
@@ -49,12 +49,12 @@
 
             <div class="row">
                 <div class="form-group col-lg-6">
-                    <label for="Password">Password* </label>
+                    <label for="Password">Password </label>
                     <input type="password" class="form-control" placeholder="XXXXXXXX" autocomplete="off" maxlength="15">
                 </div>
 
                 <div class="form-group col-lg-6">
-                    <label for="confirmPassword"> Confirm Password* </label>
+                    <label for="confirmPassword"> Confirm Password </label>
                     <input type="password" class="form-control" placeholder="XXXXXXXX" autocomplete="off" maxlength="15">
                 </div>
             </div>
